--- a/.github/workflows/docker-image-arm64.yml
+++ b/.github/workflows/docker-image-arm64.yml
@@ -1,34 +1,26 @@
-name: Publish Docker image (arm64)
+name: Build and Push Docker Image
 
 on:
   push:
-    tags:
-      - '*'
-  workflow_dispatch:
-    inputs:
-      name:
-        description: 'reason'
-        required: false
+    branches:
+      - main
+
 jobs:
-  push_to_docker_hub:
-    name: Push Docker image to Docker Hub
+  build-and-push:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
     steps:
-      - name: Clone External Repo
+      - name: Checkout code
         uses: actions/checkout@v3
         with:
-          repository: Calcium-Ion/new-api
-          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
 
       - name: Save version info
+        id: version
         run: |
           git fetch --tags
-          VERSION=$(git describe --tags --abbrev=0)
-          echo "VERSION=${VERSION}" >> $GITHUB_ENV
+          VERSION=$(git describe --tags --always)
+          echo "::set-output name=version::$VERSION"
+
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -42,20 +34,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: happyfools/new-api-arm64
-          tags: |
-            ${VERSION}
-            latest
-
       - name: Build and push Docker images
         uses: docker/build-push-action@v3
         with:
           context: .
           platforms: linux/arm64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: |
+            happyfools/new-api-arm64:latest
+            happyfools/new-api-arm64:${{ steps.version.outputs.version }}
+          labels: |
+            version=${{ steps.version.outputs.version }}
